@startuml

title __SRC's Class Diagram__\n

  namespace  {
    class AmericanBurger {
        ~ AmericanBurger()
    }
  }
  

  namespace  {
    abstract class Burger {
        - name : String
        ~ Burger()
        ~ getName()
        ~ putBun()
        ~ putCutlet()
        ~ putSauce()
    }
  }
  

  namespace  {
    abstract class BurgerFactory {
        {abstract} ~ createBurger()
        ~ orderBurger()
    }
  }
  

  namespace  {
    class BurgerStore {
        ~ createBurger()
    }
  }
  

  namespace  {
    class ChineseBurger {
        ~ ChineseBurger()
    }
  }
  

  namespace  {
    class RussianBurger {
        ~ RussianBurger()
    }
  }
  

  namespace  {
    class TestDrive {
        {static} + main()
    }
  }
  

  AmericanBurger -up-|> Burger
  BurgerStore -up-|> BurgerFactory
  ChineseBurger -up-|> Burger
  RussianBurger -up-|> Burger


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
